--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,3 @@
-# Created by https://www.gitignore.io/api/jupyternotebooks
-# Edit at https://www.gitignore.io/?templates=jupyternotebooks
-
-### JupyterNotebooks ###
-# gitignore template for Jupyter Notebooks
-# website: http://jupyter.org/
-
 .ipynb_checkpoints
 */.ipynb_checkpoints/*
 
@@ -12,7 +5,5 @@
 profile_default/
 ipython_config.py
 
-# Remove previous ipynb_checkpoints
-#   git rm -r .ipynb_checkpoints/
+.ipyn_checkpoints
 
-# End of https://www.gitignore.io/api/jupyternotebooks
